// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MousePosition matches snapshots using default values. 1`] = `
<div
  className="rs-mouse-position"
>
  <select
    className="rs-select"
    onChange={[Function]}
    value="EPSG:4326"
  >
    <option
      value="EPSG:4326"
    >
      EPSG:4326
    </option>
    <option
      value="EPSG:3857"
    >
      EPSG:3857
    </option>
  </select>
  <span
    className="rs-coordinates"
  />
</div>
`;

exports[`MousePosition matches snapshots using multiple projections. 1`] = `
<div
  className="rs-mouse-position"
>
  <select
    className="rs-select"
    onChange={[Function]}
    value="foo"
  >
    <option
      value="foo"
    >
      foo
    </option>
    <option
      value="bar"
    >
      bar
    </option>
  </select>
  <span
    className="rs-coordinates"
  />
</div>
`;

exports[`MousePosition matches snapshots using no projections. 1`] = `null`;

exports[`MousePosition matches snapshots using only one projection 1`] = `
<div
  className="rs-mouse-position"
>
  <select
    className="rs-select"
    onChange={[Function]}
    value="foo"
  >
    <option
      value="foo"
    >
      foo
    </option>
  </select>
  <span
    className="rs-coordinates"
  />
</div>
`;
